--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,7 @@ dependencies:
   #  sk_onboarding_screen: ^1.0.1
   intl: ^0.17.0
   onboarding_screen: ^0.0.3
+  firebase_messaging: ^14.1.2
 
 dev_dependencies:
   flutter_test:
