--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,6 +71,9 @@ dependencies:
   intl: ^0.17.0
   onboarding_screen: ^0.0.3
   firebase_messaging: ^14.1.2
+  flutter_iconpicker: ^3.2.2
+  material_design_icons_flutter: ^6.0.7096
+  flutter_toggle_tab: ^1.2.0
 
 dev_dependencies:
   flutter_test:
