--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: xpense
+name: wallet_view
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
@@ -56,10 +56,9 @@ dependencies:
 
   # Image Picker
   image_picker: ^0.8.6
-  # flutter_screenutil: ^2.3.0
-  # animated_theme_switcher: ^1.0.5
+
   line_awesome_flutter: ^2.0.0
-  # font_awesome_flutter: ^8.8.1
+
   after_layout: ^1.0.7+2
   clay_containers: ^0.3.2
   bottom_navy_bar: ^6.0.0
@@ -67,13 +66,13 @@ dependencies:
   dropdownfield: ^1.0.3
   percent_indicator: ^4.2.2
   pie_chart: ^5.3.2
-  #  sk_onboarding_screen: ^1.0.1
+
   intl: ^0.17.0
   onboarding_screen: ^0.0.3
   firebase_messaging: ^14.1.2
-  flutter_iconpicker: ^3.2.2
-  material_design_icons_flutter: ^6.0.7096
+
   flutter_toggle_tab: ^1.2.0
+  flutter_launcher_icons: ^0.11.0
 
 dev_dependencies:
   flutter_test:
@@ -86,10 +85,8 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
 
-  flutter_launcher_icons: ^0.11.0
-
 flutter_icons:
-  image_path: "assets/images/logo_icon.png"
+  image_path: "assets/images/app_logo.png"
   android: true
   ios: true
 
