--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,6 +73,8 @@ dependencies:
 
   flutter_toggle_tab: ^1.2.0
   flutter_launcher_icons: ^0.11.0
+  google_sign_in: ^5.4.2
+  flutter_svg: ^1.1.6
 
 dev_dependencies:
   flutter_test:
