--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,6 +75,8 @@ dependencies:
   flutter_launcher_icons: ^0.11.0
   google_sign_in: ^5.4.2
   flutter_svg: ^1.1.6
+  flutter_otp_text_field: ^1.1.1
+  google_fonts: ^3.0.1
 
 dev_dependencies:
   flutter_test:
