--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -79,6 +79,9 @@ dependencies:
   google_fonts: ^3.0.1
   country_picker: ^2.0.19
   pinput: ^2.2.21
+  flutter_riverpod: ^2.1.3
+  cached_network_image: ^3.2.3
+  timeago: ^3.3.0
 
 dev_dependencies:
   flutter_test:
