--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 1.0.0+2
 
 environment:
   sdk: ">=2.18.4 <3.0.0"
@@ -76,10 +76,12 @@ dependencies:
   google_sign_in: ^5.4.2
   flutter_svg: ^1.1.6
   flutter_otp_text_field: ^1.1.1
-  google_fonts: ^3.0.1
+  google_fonts: ^4.0.1
   country_picker: ^2.0.19
   pinput: ^2.2.21
-  flutter_riverpod: ^2.1.3
+ 
+  flutter_native_splash: ^2.2.16
+  intl_phone_field: ^3.1.0
   cached_network_image: ^3.2.3
   timeago: ^3.3.0
 
